<resources>
    <string name="app_name">English Portuguese Dictionary</string>
    <string name="portuguese_dictionary">Portuguese Dictionary</string>

    <!-- Prompts -->
    <string name="Dictionary">Dictionary</string>
    <string name="quickly_search_by_typing_a_word">Quickly search by typing a word</string>
    <string name="please_enter_a_word">Please enter a word</string>
    <string name="word_not_found">Word not found</string>
    <string name="word_not_found_please_search_onnline">Word not found, please search online</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="type_a_word">Type a word</string>
    <string name="please_enter_text_to_be_translated">Please enter the text to translate</string>
    <string name="translating_">Translating...</string>
    <string name="result">Result</string>
    <string name="error_translation">Error translation</string>
    <string name="model_could_not_be_downloaded">Model could not be downloaded</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="language_not_supported">Language is not supported</string>
    <string name="initialize_failed">Initialize failed</string>
    <string name="failed_to_load_ad">Failed to load ad.</string>
    <string name="connected">Connected</string>

    <!-- Dictionary type -->
    <string name="en">en</string>
    <string name="pt">pt</string>

    <!-- For buttons and image views -->
    <string name="todo">TODO</string>
    <string name="clear_all_history">Clear all history</string>
    <string name="translate">Translate</string>

    <!-- For text views -->
    <string name="uk">UK</string>
    <string name="us">US</string>
    <string name="not_found">Not found...</string>
    <string name="online_searching">Online searching</string>
    <string name="history">history</string>
    <string name="word_look_up">look up</string>
    <string name="text_translation">translate</string>
    <string name="Favorite">Favorite</string>
    <string name="favorite">favorite</string>
    <string name="share_this_app">Share this app</string>
    <string name="see_all">See all</string>
    <string name="like_this_app">Like this app?</string>
    <string name="rate_us">Rate us</string>
    <string name="or">or</string>
    <string name="_15_09_2020">15/09/2020</string>

    <!-- Definition Fragment -->
    <string name="definition">Definition</string>
    <string name="grammars">Grammars</string>
    <string name="benifit">[benifit]</string>
    <string name="example_definition" translatable="false">* proveito\n* benéfico, favor\n* vantagem\n* privilégio\n* beneficiar\n* aproveitar\n* lucrar</string>
    <string name="pronounce">Pronounce</string>

    <!-- Explanation Fragment -->
    <string name="english_explanations">English explanations</string>
    <string name="synonyms">Synonyms</string>

    <!-- Card View layout adapter -->
    <string name="example_english_sentence" translatable="false">I got much benefit from that book</string>
    <string name="example_translation" translatable="false">Tirei muito proveito desse livro.</string>
    <string name="examples">Examples</string>
    <string name="example">Example</string>
    <string name="translate_text">Translate text</string>
    <string name="recent_words">Recent words</string>
    <string name="_1" translatable="false">1.</string>
    <string name="empty_list">Empty list</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete_all_history">Do you want to delete all History?</string>
    <string name="english_word">English word</string>
    <string name="portuguese_word">Portuguese word</string>
    <string name="welcome_to_english_portuguese_dictionary">Welcome to English Portuguese Dictionary</string>
    <string name="please_connect_to_the_internet_to_proceed_further">Please connect to the internet to proceed further</string>
    <string name="please_connect_to_wifi_to_download_translation_model">Please connect to Wifi to download translation model</string>
    <string name="connect">Connect</string>
    <string name="english_or_portuguese">English or Portuguese</string>
    <string name="please_wait">Please Wait...</string>
    <string name="click">Click</string>
    <string name="here">here</string>
    <string name="to_search_for_a_word">to search for a word</string>
    <string name="is_removed_from_favorite"> is removed from Favorite</string>
    <string name="is_added_to_favorite"> is added to Favorite</string>
    <string name="explanation">Explanation</string>
    <string name="synonym">Synonym</string>
    <string name="english_text">English text</string>
    <string name="portuguese_text">Portuguese text</string>
    <string name="retry">Retry</string>
    <string name="translation_model_has_been_downloaded_successfully">Translation model has been downloaded successfully</string>
    <string name="downloading_translation_model">Downloading translation model...</string>
    <string name="english_portuguese">English Portuguese</string>

</resources>