<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.SplashScreenActivity">

    <ImageView
        android:id="@+id/imageViewAppLogo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo_dictionary"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/english_portuguese"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textViewSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/Dictionary"
        android:textAlignment="center"
        android:textSize="22sp" />

</LinearLayout>