<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvExampleItemNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/ibSpeakerExample"
            android:layout_toEndOf="@id/tvExampleItemNumber"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/tvEnglishSentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_english_sentence"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvTranslation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_translation"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/ibSpeakerExample"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:contentDescription="@string/todo"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_speaker_24dp" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>