<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvExplanationItemNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/_1"
            android:textColor="@color/colorRed1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ibSpeakerExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:contentDescription="@string/todo"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:src="@drawable/ic_speaker_24dp" tools:targetApi="m"/>

        <TextView
            android:id="@+id/tvExplanationItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/ibSpeakerExplanation"
            android:layout_toEndOf="@id/tvExplanationItemNumber"
            android:text="@string/example_english_sentence"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>