<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.detailactivity.DefinitionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:id="@+id/linearLayoutUSPhonetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="US"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/tvUSPhonetic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benifit"
                android:textColor="@color/colorDefault"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/ivSpeakerUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_speaker_24dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUKPhonetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UK"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/tvUKPhonetic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benifit"
                android:textColor="@color/colorDefault"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/ivSpeakerUK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_speaker_24dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/definition"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/example_definition"
            android:textColor="@color/colorDefault"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvGrammarsPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/grammars"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvGrammars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/example_definition"
            android:textColor="@color/colorDefault"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>