<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@id/ibFavoriteFromHistory"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/cvHistoryWordType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorGreen3"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="4dp"
                        android:paddingHorizontal="7dp">

                        <TextView
                            android:id="@+id/tvHistoryWordType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/en"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:includeFontPadding="false"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvHistoryWord"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/example"
                    android:textColor="@color/colorDefault"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvHistoryExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_english_sentence"
                android:textSize="14sp"
                android:maxLines="2"
                android:ellipsize="end"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibFavoriteFromHistory"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_favorite_border_24dp"
            android:background="#00000000"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>


